syntax = "proto3";

package regen.ecocredit.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "regen/ecocredit/v1/state.proto";

option go_package = "github.com/regen-network/regen-ledger/x/ecocredit/core";

// Msg is the regen.ecocredit.v1 Msg service.
service Msg {

  // CreateClass creates a new credit class with an approved list of issuers and
  // optional metadata.
  rpc CreateClass(MsgCreateClass) returns (MsgCreateClassResponse);

  // CreateProject creates a new project within a credit class.
  rpc CreateProject(MsgCreateProject) returns (MsgCreateProjectResponse);

  // CreateBatch creates a new batch of credits for an existing project.
  // This will create a new batch denom with a fixed supply. Issued credits can
  // be distributed to recipients in either tradable or retired form.
  rpc CreateBatch(MsgCreateBatch) returns (MsgCreateBatchResponse);

  // Send sends tradable credits from one account to another account. Sent
  // credits can either be tradable or retired on receipt.
  rpc Send(MsgSend) returns (MsgSendResponse);

  // Retire retires a specified number of credits in the holder's account.
  rpc Retire(MsgRetire) returns (MsgRetireResponse);

  // Cancel removes a number of credits from the holder's account and also
  // deducts them from the tradable supply, effectively cancelling their
  // issuance on Regen Ledger
  rpc Cancel(MsgCancel) returns (MsgCancelResponse);

  // UpdateClassAdmin updates the credit class admin
  rpc UpdateClassAdmin(MsgUpdateClassAdmin)
      returns (MsgUpdateClassAdminResponse);

  // UpdateClassIssuers updates the credit class issuer list
  rpc UpdateClassIssuers(MsgUpdateClassIssuers)
      returns (MsgUpdateClassIssuersResponse);

  // UpdateClassMetadata updates the credit class metadata
  rpc UpdateClassMetadata(MsgUpdateClassMetadata)
      returns (MsgUpdateClassMetadataResponse);

  // AddCreditType adds a new credit type. This message must be signed by the governance module.
  rpc AddCreditType(MsgAddCreditType) returns (MsgAddCreditTypeResponse);

  // ToggleAllowList toggles the allow list. This message must be signed by the governance module.
  rpc ToggleAllowList(MsgToggleAllowList) returns (MsgToggleAllowListResponse);

  // UpdateAllowedCreditClassCreators updates the allow list of credit class creators. This message
  // must be signed by the governance module.
  rpc UpdateAllowedCreditClassCreators(MsgUpdateAllowedCreditClassCreators) returns (MsgUpdateAllowedCreditClassCreatorsResponse);

  // UpdateCreditClassFee updates the list of allowed denoms and their amounts to be used as credit
  // class fees. This message must be signed by the governance module.
  rpc UpdateCreditClassFee(MsgUpdateCreditClassFee) returns (MsgUpdateCreditClassFeeResponse);
}

// MsgCreateClass is the Msg/CreateClass request type.
message MsgCreateClass {
  // admin is the address of the account that created the credit class.
  string admin = 1;

  // issuers are the account addresses of the approved issuers.
  repeated string issuers = 2;

  // metadata is any arbitrary metadata to attached to the credit class.
  string metadata = 3;

  // credit_type_abbrev describes the abbreviation of a credit type (e.g. "C",
  // "BIO").
  string credit_type_abbrev = 4;

  // fee specifies the fee to pay for the creation of the credit class.
  // acceptable fees for creating a credit class can be found in the governance
  // parameters for the ecocredit module.
  cosmos.base.v1beta1.Coin fee = 5;
}

// MsgCreateClassResponse is the Msg/CreateClass response type.
message MsgCreateClassResponse {
  // class_id is the unique ID of the newly created credit class.
  string class_id = 1;
}

// MsgCreateProjectResponse is the Msg/CreateProject request type.
message MsgCreateProject {
  // issuer is the address of an approved issuer for the credit class through
  // which batches will be issued. It is not required, however, that this same
  // issuer issue all batches for a project.
  string issuer = 1;

  // class_id is the unique ID of the class within which the project is created.
  string class_id = 2;

  // metadata is any arbitrary metadata attached to the project.
  string metadata = 3;

  // project_location is the location of the project backing the credits in this
  // batch. It is a string of the form
  // <country-code>[-<sub-national-code>[ <postal-code>]], with the first two
  // fields conforming to ISO 3166-2, and postal-code being up to 64
  // alphanumeric characters. country-code is required, while sub-national-code
  // and postal-code can be added for increasing precision.
  string project_location = 4;

  // project_id is an optional user-specified project ID which can be used
  // instead of an auto-generated ID. If project_id is provided, it must be
  // unique within the credit class and match the regex [A-Za-z0-9]{2,16}
  // or else the operation will fail. If project_id is omitted an ID will
  // automatically be generated.
  string project_id = 5;
}

// MsgCreateProjectResponse is the Msg/CreateProject response type.
message MsgCreateProjectResponse {
  // project_id is the ID of the newly created project.
  string project_id = 1;
}

// MsgCreateBatch is the Msg/CreateBatch request type.
message MsgCreateBatch {

  // issuer is the address of the batch issuer.
  string issuer = 1;

  // project_id is the unique ID of the project this batch belongs to.
  string project_id = 2;

  // issuance are the credits issued in the batch.
  repeated BatchIssuance issuance = 3;

  // metadata is any arbitrary metadata attached to the credit batch.
  string metadata = 4;

  // start_date is the beginning of the period during which this credit batch
  // was quantified and verified.
  google.protobuf.Timestamp start_date = 5 [ (gogoproto.stdtime) = true ];

  // end_date is the end of the period during which this credit batch was
  // quantified and verified.
  google.protobuf.Timestamp end_date = 6 [ (gogoproto.stdtime) = true ];

  // BatchIssuance represents the issuance of some credits in a batch to a
  // single recipient.
  message BatchIssuance {

    // recipient is the account of the recipient.
    string recipient = 1;

    // tradable_amount is the number of credits in this issuance that can be
    // traded by this recipient. Decimal values are acceptable.
    string tradable_amount = 2;

    // retired_amount is the number of credits in this issuance that are
    // effectively retired by the issuer on receipt. Decimal values are
    // acceptable.
    string retired_amount = 3;

    // retirement_location is the location of the beneficiary or buyer of the
    // retired credits. This must be provided if retired_amount is positive. It
    // is a string of the form
    // <country-code>[-<sub-national-code>[ <postal-code>]], with the first two
    // fields conforming to ISO 3166-2, and postal-code being up to 64
    // alphanumeric characters.
    string retirement_location = 4;
  }
}

// MsgCreateBatchResponse is the Msg/CreateBatch response type.
message MsgCreateBatchResponse {
  // batch_denom is the unique denomination ID of the newly created batch.
  string batch_denom = 1;
}

// MsgSend is the Msg/Send request type.
message MsgSend {

  // sender is the address of the account sending credits.
  string sender = 1;

  // sender is the address of the account receiving credits.
  string recipient = 2;

  // credits are the credits being sent.
  repeated SendCredits credits = 3;

  // SendCredits specifies a batch and the number of credits being transferred.
  // This is split into tradable credits, which will remain tradable on receipt,
  // and retired credits, which will be retired on receipt.
  message SendCredits {

    // batch_denom is the unique ID of the credit batch.
    string batch_denom = 1;

    // tradable_amount is the number of credits in this transfer that can be
    // traded by the recipient. Decimal values are acceptable within the
    // precision returned by Query/Precision.
    string tradable_amount = 2;

    // retired_amount is the number of credits in this transfer that are
    // effectively retired by the issuer on receipt. Decimal values are
    // acceptable within the precision returned by Query/Precision.
    string retired_amount = 3;

    // retirement_location is the location of the beneficiary or buyer of the
    // retired credits. This must be provided if retired_amount is positive. It
    // is a string of the form
    // <country-code>[-<sub-national-code>[ <postal-code>]], with the first two
    // fields conforming to ISO 3166-2, and postal-code being up to 64
    // alphanumeric characters.
    string retirement_location = 4;
  }
}

// MsgSendResponse is the Msg/Send response type.
message MsgSendResponse {}

// MsgRetire is the Msg/Retire request type.
message MsgRetire {

  // holder is the credit holder address.
  string holder = 1;

  // credits are the credits being retired.
  repeated RetireCredits credits = 2;

  // RetireCredits specifies a batch and the number of credits being retired.
  message RetireCredits {

    // batch_denom is the unique ID of the credit batch.
    string batch_denom = 1;

    // amount is the number of credits being retired.
    // Decimal values are acceptable within the precision returned by
    // Query/Precision.
    string amount = 2;
  }

  // location is the location of the beneficiary or buyer of the retired
  // credits. It is a string of the form
  // <country-code>[-<sub-national-code>[ <postal-code>]], with the first two
  // fields conforming to ISO 3166-2, and postal-code being up to 64
  // alphanumeric characters.
  string location = 3;
}

// MsgRetire is the Msg/Retire response type.
message MsgRetireResponse {}

// MsgCancel is the Msg/Cancel request type.
message MsgCancel {

  // holder is the credit holder address.
  string holder = 1;

  // credits are the credits being cancelled.
  repeated CancelCredits credits = 2;

  // CancelCredits specifies a batch and the number of credits being cancelled.
  message CancelCredits {

    // batch_denom is the unique ID of the credit batch.
    string batch_denom = 1;

    // amount is the number of credits being cancelled.
    // Decimal values are acceptable within the precision returned by
    // Query/Precision.
    string amount = 2;
  }
}

// MsgCancelResponse is the Msg/Cancel response type.
message MsgCancelResponse {}

// MsgUpdateClassAdmin is the Msg/UpdateClassAdmin request type.
message MsgUpdateClassAdmin {

  // admin is the address of the account that is the admin of the credit class.
  string admin = 1;

  // class_id is the unique ID of the credit class.
  string class_id = 2;

  // new_admin is the address of the new admin of the credit class.
  string new_admin = 3;
}

// MsgUpdateClassAdminResponse is the MsgUpdateClassAdmin response type.
message MsgUpdateClassAdminResponse {}

// MsgUpdateClassIssuers is the Msg/UpdateClassIssuers request type.
message MsgUpdateClassIssuers {

  // admin is the address of the account that is the admin of the credit class.
  string admin = 1;

  // class_id is the unique ID of the credit class.
  string class_id = 2;

  // add_issuers are the issuers to add to the class issuers list.
  repeated string add_issuers = 3;

  // remove_issuers are the issuers to remove from the class issuers list.
  repeated string remove_issuers = 4;
}

// MsgUpdateClassIssuersResponse is the MsgUpdateClassIssuers response type.
message MsgUpdateClassIssuersResponse {}

// MsgUpdateClassMetadata is the Msg/UpdateClassMetadata request type.
message MsgUpdateClassMetadata {

  // admin is the address of the account that is the admin of the credit class.
  string admin = 1;

  // class_id is the unique ID of the credit class.
  string class_id = 2;

  // metadata is the updated arbitrary metadata to be attached to the credit
  // class.
  string metadata = 3;
}

// MsgUpdateClassMetadataResponse is the MsgUpdateClassMetadata response type.
message MsgUpdateClassMetadataResponse {}

// MsgAddCreditType is the Msg/AddCreditTypes request type.
message MsgAddCreditType {

  // root_address is the address of the signer.
  // This MUST equal the address of the gov module for the tx to succeed.
  string root_address = 1;

  // credit_types is a list of credit types to add.
  repeated CreditType credit_types = 2;
}

// MsgAddCreditTypeResponse is the Msg/AddCreditTypes response type.
message MsgAddCreditTypeResponse {}


// MsgToggleAllowList is the Msg/ToggleAllowList request type
message MsgToggleAllowList {
  // root_address is the address of the signer.
  // This MUST equal the address of the gov module for the tx to succeed.
  string root_address = 1;

  // toggle is what the allow list will be set to.
  bool toggle = 2;
}

// MsgToggleAllowListResponse is the Msg/MsgToggleAllowList response type.
message MsgToggleAllowListResponse {}

// MsgUpdateAllowedCreditClassCreators is the Msg/UpdateAllowedCreditClassCreators request type
message MsgUpdateAllowedCreditClassCreators {
  // root_address is the address of the signer.
  // This MUST equal the address of the gov module for the tx to succeed.
  string root_address = 1;

  // add_creators is a list of addresses to be added to the allow list for credit class creation.
  repeated string add_creators = 2;

  // remove_creators is a list of addresses to be removed from the allow list for credit class creation.
  repeated string remove_creators = 3;
}

// MsgNewCreditClassCreatorResponse is the Msg/UpdateAllowedCreditClassCreators response type
message MsgUpdateAllowedCreditClassCreatorsResponse {}

// MsgUpdateCreditClassFee is the Msg/UpdateCreditClassFees request type
message MsgUpdateCreditClassFee {
  // root_address is the address of the signer.
  // This MUST equal the address of the gov module for the tx to succeed.
  string root_address = 1;

  // add_fees are the coin denoms and amounts to be added to the allowed credit class creation fees.
  repeated cosmos.base.v1beta1.Coin add_fees = 2;

  // remove_fees are the coin denoms and amounts to be removed from the allowed credit class creation fees.
  repeated string remove_denoms = 3;
}

// MsgUpdateCreditClassFeeResponse is the Msg/UpdateCreditClassFees response type
message MsgUpdateCreditClassFeeResponse {}
